--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 				<artifactId>redisson-spring-boot-starter</artifactId>
 				<version>3.13.0</version>
 			</dependency>
+			<!-- kaptcha  -->
+			<dependency>
+				<groupId>com.github.penggle</groupId>
+				<artifactId>kaptcha</artifactId>
+				<version>2.3.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
