--- a/shared.all/user.shared/user.service.impl/pom.xml
+++ b/shared.all/user.shared/user.service.impl/pom.xml
@@ -53,6 +53,11 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
+        <!-- kaptcha  -->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
