--- a/application/pom.xml
+++ b/application/pom.xml
@@ -34,6 +34,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.0.RELEASE</version>
                 <configuration>
                     <excludes>
                         <exclude>
