update：修改pom.xml

--- a/cola-user-domain/pom.xml
+++ b/cola-user-domain/pom.xml
@@ -13,11 +13,6 @@
     <name>cola-user-domain</name>
 
     <dependencies>
-        <dependency>
-            <groupId>com.lppnb</groupId>
-            <artifactId>cola-user-client</artifactId>
-        </dependency>
-
         <!-- COLA components -->
         <dependency>
             <groupId>com.alibaba.cola</groupId>
@@ -26,6 +21,10 @@
         <dependency>
             <groupId>com.alibaba.cola</groupId>
             <artifactId>cola-component-exception</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
         <!-- COLA components End-->
     </dependencies>
