--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
                 <artifactId>hutool-all</artifactId>
                 <version>5.8.9</version>
             </dependency>
+            <!--Swagger-UI API文档生产工具-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>3.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
